--- a/site/layout/style.css
+++ b/site/layout/style.css
@@ -1,1 +1,5 @@
 @import "reset-css/reset.css";
+
+body {
+  overflow-x: hidden;
+}
